# open_source_code_vulnerabilities_dataset

./: .gitignore  README.md  commits_introspection.ipynb  convert_to_python3.py  evaluation.ipynb  final_vulnerabilities.parquet  finetuning.ipynb  parse_data.py  pyproject.toml  sampling.ipynb
src/: get_changes_lines_units.py  paths.py  process_code_changes.py
